# faiss-rs-playground

./: Cargo.toml
src/: main.rs
