[package]
name = "faiss-rs-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# sudo apt-get install libatlas-base-dev 

[dependencies]
"faiss" = { version = "0.12.1", features = ["static"] }
"rand" = "0.8.5"
